# claude-rails

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README.zh-CN.md  install.sh  pyproject.toml
harness/: antagonist.py  antagonist_cli.py  exec_verifier.py  pipeline.py  reward.py  skill_extractor.py  spec_file.py
hooks/: post_agent.py  post_edit.py  pre_commit.py  pre_edit.py  stop_check.py
marketing/: wechat-v0.2-article.md  xiaohongshu-post-v1.md
pipeline/stage_prompts/: 01_spec.md  03_implement.md  05_test.md
